--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator 01</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container-all">
       <div class="container-display">
         <p class="display-history">120+3.4</p>
-        <p class="display-main">123.4</p>
+        <p class="display-main" id="display-main">0</p>
       </div>
 
       <div class="container-keypad">
@@ -20,19 +20,19 @@
           <!--- left panel-->
           <p class="keys-operator" id="key-ac">AC</p>
           <p class="keys-operator" id="key-pide">/</p>
-          <p class="keys-operator" id="key-x">x</p>
-          <p>7</p>
-          <p>8</p>
-          <p>9</p>
-          <p>4</p>
-          <p>5</p>
-          <p>6</p>
-          <p>1</p>
-          <p>2</p>
-          <p>3</p>
+          <p class="keys-operator" id="key-x">*</p>
+          <p class="keys-number" id="key-7">7</p>
+          <p class="keys-number" id="key-8">8</p>
+          <p class="keys-number" id="key-9">9</p>
+          <p class="keys-number" id="key-4">4</p>
+          <p class="keys-number" id="key-5">5</p>
+          <p class="keys-number" id="key-6">6</p>
+          <p class="keys-number" id="key-1">1</p>
+          <p class="keys-number" id="key-2">2</p>
+          <p class="keys-number" id="key-3">3</p>
           <p>%</p>
-          <p>0</p>
-          <p>.</p>
+          <p class="keys-number" id="key-0">0</p>
+          <p class="keys-number" id="key-point">.</p>
         </div>
 
         <div class="right-panel">
@@ -43,9 +43,6 @@
           <p class="keys-operator" id="key-equal">=</p>
         </div>
       </div>
-    </div>
-    <div>
-      <img id="sample" src="Images/sampleui.jpg" alt="Sample UI" />
     </div>
   </body>
 </html>
